<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/courseBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:contentPaddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   >

    <ImageView
        android:id="@+id/courseimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="courseImage"
        app:srcCompat="@drawable/ic_java" />
    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:layout_margin="10sp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:layout_margin="10sp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@color/white"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/level"
            android:textColor="@color/white"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/courseData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:layout_margin="10sp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/courselevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>



    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>